--- a/components/login/login-form.module.css
+++ b/components/login/login-form.module.css
@@ -1,4 +1,23 @@
 .login_box {
-    width: 340px; 
-    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-left: 100;
+    background: rgba(255, 156, 64, 0.75);
+    border-radius: 15px;
+    flex: none;
+}
+.button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 8px 16px;
+    background: #62696D;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 11px;
+    flex: none;
+    color: white;
+    width: 50%;
 }
