completed login page

--- a/styles/global.css
+++ b/styles/global.css
@@ -1,7 +1,9 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 body {
     background-color: #f7f7f7;
+    font-family: 'Sen';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
 }
